# LibCore

./: CMakeLists.txt  LICENSE  README.md
.github/workflows/: cmake-multi-platform.yml
include/: Allocator.hpp  Args.hpp  Core.hpp  Env.hpp  FS.hpp  File.hpp  LibCore.hpp  Logger.hpp  Result.hpp  Status.hpp  Utils.hpp
src/: Allocator.cpp  Args.cpp  Env.cpp  FS.cpp  File.cpp  Logger.cpp  Utils.cpp
test/: Allocator.cpp  Args.cpp  File.cpp
